--- a/SuperMarket_Client/Areas/Admin/Views/Brand/CreateBrand.cshtml
+++ b/SuperMarket_Client/Areas/Admin/Views/Brand/CreateBrand.cshtml
@@ -43,6 +43,7 @@
 			</div>
 			<button id="update-profile-button" type="submit" onclick="return ValidateForm()" class="w-100 btn btn-lg btn-primary">Create</button>
 		</form>
+		<a href="/Admin/Brand/Index">Back to Brand Manage</a>
 	</div>
 </div>
 
