--- a/SuperMarket_Client/Areas/Admin/Views/Brand/UpdateBrand.cshtml
+++ b/SuperMarket_Client/Areas/Admin/Views/Brand/UpdateBrand.cshtml
@@ -51,6 +51,8 @@
 			</div>
 			<button id="update-profile-button" type="submit" class="w-100 btn btn-lg btn-primary">Update</button>
 		</form>
+		<a href="/Admin/Brand/Index">Back to Brand Manage</a>
+
 	</div>
 </div>
 @section Scripts {
