--- a/SuperMarket_Client/Areas/Admin/Views/Category/CreateCategory.cshtml
+++ b/SuperMarket_Client/Areas/Admin/Views/Category/CreateCategory.cshtml
@@ -23,6 +23,8 @@
 			</div>
 			<button id="update-profile-button" type="submit" class="w-100 btn btn-lg btn-primary">Create</button>
 		</form>
+		<a href="/Admin/Brand_Category/Brand_CategoryManage">Back to Brand-Category Manage</a>
+
 	</div>
 </div>
 
