--- a/SuperMarket_Client/Areas/Admin/Views/Product/CreateProduct.cshtml
+++ b/SuperMarket_Client/Areas/Admin/Views/Product/CreateProduct.cshtml
@@ -80,7 +80,7 @@
 	</div>
 </div>
 <div>
-	<a asp-action="Index">Back to Home</a>
+	<a href="/Admin/Product/Index">Back to product manage</a>
 </div>
 <div class="text-center" id="ImgListMain"></div>
 <div class="text-center" id="ImgListSide"></div>
