--- a/SuperMarket_Client/Areas/Admin/Views/Product/updateProduct.cshtml
+++ b/SuperMarket_Client/Areas/Admin/Views/Product/updateProduct.cshtml
@@ -105,5 +105,5 @@
 	</div>
 </div>
 <div>
-	<a asp-action="Index">Back to Home</a>
+	<a href="/Admin/Product/Index">Back to Product manage</a>
 </div>
