--- a/SuperMarket_Client/Views/Shared/_Layout.cshtml
+++ b/SuperMarket_Client/Views/Shared/_Layout.cshtml
@@ -43,50 +43,8 @@
 
     <div class="wrapper ovh">
   <div class="preloader"></div>
-  @*<div class="popup_onload_modal">
-    <!-- Modal -->
-    <div class="modal fade" id="mailchimp_newslatter_popup" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="mailchimp_newslatter_popup" aria-hidden="true">
-      <div class="modal-dialog modal-lg modal-dialog-centered">
-        <div class="modal-content">
-          <div class="modal-header">
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-          </div>
-          <div class="modal-body">
-            <div class="row">
-              <div class="col-lg-7">
-                <div class="p30">
-                  <div class="mailchimp_widget text-center mb30">
-                    <div class="icon"><span class="flaticon-email-1"></span></div>
-                    <div class="details">
-                      <h3 class="title">Get <span class="text-thm">25%</span> Off</h3>
-                      <p class="para">Subscribe to the Molla eCommerce newsletter to receive timely updates from your favorite products.</p>
-                    </div>
-                  </div>
-                  <div class="footer_social_widget">
-                    <form class="footer_mailchimp_form mb10">
-                      <div class="row align-items-center">
-                        <div class="col-auto">
-                          <input type="email" class="form-control" placeholder="Your Email...">
-                          <button type="submit">Subscribe</button>
-                        </div>
-                      </div>
-                    </form>
-                    <div class="form-check">
-                      <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                      <label class="form-check-label" for="flexCheckDefault">Do not show this popup again</label>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="col-lg-5">
-                <img src="~/Asset/images/banner/mailchimp-banner.jpg" alt="mailchimp-banner.jpg">
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>*@
+  @await Component.InvokeAsync("BranchList")
+  
   
   <!-- header top -->
   <div class="header_top bgc-thm2 dn-992">
@@ -245,188 +203,7 @@
               <i class="fa fa-angle-down icon"></i>
             </div>
             <ul class="menu">
-              <li>
-                <a href="#">
-                  <span class="menu-icn flaticon-hot-sale"></span>
-                  <span class="menu-title">Hot Offers</span>
-                </a>
-              </li>
-              <li>
-                <a href="#">
-                  <span class="menu-icn flaticon-bell"></span>
-                  <span class="menu-title">New Arrivals</span>
-                </a>
-              </li>
-              <li>
-                <a href="#">
-                  <span class="menu-icn flaticon-discount"></span>
-                  <span class="menu-title">Deals of The Day</span>
-                </a>
-              </li>
-              <li>
-                <a class="dropdown" href="#">
-                  <span class="menu-icn flaticon-harvest"></span>
-                  <span class="menu-title">Fruits</span>
-                </a>
-                <div class="drop-menu">
-                  <div class="one-third">
-                    <div class="cat-title">Fruits</div>
-                    <ul class="mb0">
-                      <li><a href="#">Apples & Bananas</a></li>
-                      <li><a href="#">Berries</a></li>
-                      <li><a href="#">Grapes</a></li>
-                      <li><a href="#">Mangoes</a></li>
-                      <li><a href="#">Melons</a></li>
-                      <li><a href="#">Pears</a></li>
-                      <li><a href="#">Anjeer (Figs)</a></li>
-                      <li><a href="#">Apricots</a></li>
-                    </ul>
-                    <div class="fresh-fruit">
-                      <p>Fresh Fruit</p>
-                      <h3 class="title">Fresh Summer With <br>Just $200.99</h3>
-                    </div>
-                    <div class="show"><a href="#">SHOP NOW</a></div>
-                  </div>
-                  <div class="one-third mt45">
-                    <ul class="mb0">
-                      <li><a href="#">Dates</a></li>
-                      <li><a href="#">Mixed Dried Fruits</a></li>
-                      <li><a href="#">Prunes</a></li>
-                      <li><a href="#">Raisins</a></li>
-                    </ul>
-                  </div>
-                  <div class="fruit_thumg"><img src="~/Asset/images/resource/menu-fruit.png" alt="menu-fruit.png"></div>
-                </div>
-              </li>
-              <li>
-                <a class="dropdown" href="#">
-                  <span class="menu-icn flaticon-vegetable"></span>
-                  <span class="menu-title">Vegetables</span>
-                </a>
-                <div class="drop-menu">
-                  <div class="one-third">
-                    <div class="cat-title">Fruits</div>
-                    <ul class="mb0">
-                      <li><a href="#">Apples & Bananas</a></li>
-                      <li><a href="#">Berries</a></li>
-                      <li><a href="#">Grapes</a></li>
-                      <li><a href="#">Mangoes</a></li>
-                      <li><a href="#">Melons</a></li>
-                      <li><a href="#">Pears</a></li>
-                      <li><a href="#">Anjeer (Figs)</a></li>
-                      <li><a href="#">Apricots</a></li>
-                    </ul>
-                    <div class="fresh-fruit">
-                      <p>Fresh Fruit</p>
-                      <h3 class="title">Fresh Summer With <br>Just $200.99</h3>
-                    </div>
-                    <div class="show"><a href="#">SHOP NOW</a></div>
-                  </div>
-                  <div class="one-third mt45">
-                    <ul class="mb0">
-                      <li><a href="#">Dates</a></li>
-                      <li><a href="#">Mixed Dried Fruits</a></li>
-                      <li><a href="#">Prunes</a></li>
-                      <li><a href="#">Raisins</a></li>
-                    </ul>
-                  </div>
-                  <div class="fruit_thumg"><img src="~/Asset/images/resource/menu-fruit.png" alt="menu-fruit.png"></div>
-                </div>
-              </li>
-              <li>
-                <a href="#">
-                  <span class="menu-icn flaticon-plastic-bottle"></span>
-                  <span class="menu-title">Drinks</span>
-                </a>
-              </li>
-              <li>
-                <a class="dropdown" href="#">
-                  <span class="menu-icn flaticon-bread-1"></span>
-                  <span class="menu-title">Bakery</span>
-                </a>
-                <div class="drop-menu">
-                  <div class="one-third">
-                    <div class="cat-title">Fruits</div>
-                    <ul class="mb0">
-                      <li><a href="#">Apples & Bananas</a></li>
-                      <li><a href="#">Berries</a></li>
-                      <li><a href="#">Grapes</a></li>
-                      <li><a href="#">Mangoes</a></li>
-                      <li><a href="#">Melons</a></li>
-                      <li><a href="#">Pears</a></li>
-                      <li><a href="#">Anjeer (Figs)</a></li>
-                      <li><a href="#">Apricots</a></li>
-                    </ul>
-                    <div class="fresh-fruit">
-                      <p>Fresh Fruit</p>
-                      <h3 class="title">Fresh Summer With <br>Just $200.99</h3>
-                    </div>
-                    <div class="show"><a href="#">SHOP NOW</a></div>
-                  </div>
-                  <div class="one-third mt45">
-                    <ul class="mb0">
-                      <li><a href="#">Dates</a></li>
-                      <li><a href="#">Mixed Dried Fruits</a></li>
-                      <li><a href="#">Prunes</a></li>
-                      <li><a href="#">Raisins</a></li>
-                    </ul>
-                  </div>
-                  <div class="fruit_thumg"><img src="~/Asset/images/resource/menu-fruit.png" alt="menu-fruit.png"></div>
-                </div>
-              </li>
-              <li>
-                <a href="#">
-                  <span class="menu-icn flaticon-boiled-egg"></span>
-                  <span class="menu-title">Butter & Egges</span>
-                </a>
-              </li>
-              <li>
-                <a class="dropdown" href="#">
-                  <span class="menu-icn flaticon-milk-1"></span>
-                  <span class="menu-title">Milks & Creams</span>
-                </a>
-                <div class="drop-menu">
-                  <div class="one-third">
-                    <div class="cat-title">Fruits</div>
-                    <ul class="mb0">
-                      <li><a href="#">Apples & Bananas</a></li>
-                      <li><a href="#">Berries</a></li>
-                      <li><a href="#">Grapes</a></li>
-                      <li><a href="#">Mangoes</a></li>
-                      <li><a href="#">Melons</a></li>
-                      <li><a href="#">Pears</a></li>
-                      <li><a href="#">Anjeer (Figs)</a></li>
-                      <li><a href="#">Apricots</a></li>
-                    </ul>
-                    <div class="fresh-fruit">
-                      <p>Fresh Fruit</p>
-                      <h3 class="title">Fresh Summer With <br>Just $200.99</h3>
-                    </div>
-                    <div class="show"><a href="#">SHOP NOW</a></div>
-                  </div>
-                  <div class="one-third mt45">
-                    <ul class="mb0">
-                      <li><a href="#">Dates</a></li>
-                      <li><a href="#">Mixed Dried Fruits</a></li>
-                      <li><a href="#">Prunes</a></li>
-                      <li><a href="#">Raisins</a></li>
-                    </ul>
-                  </div>
-                  <div class="fruit_thumg"><img src="~/Asset/images/resource/menu-fruit.png" alt="menu-fruit.png"></div>
-                </div>
-              </li>
-              <li>
-                <a href="#">
-                  <span class="menu-icn flaticon-meat"></span>
-                  <span class="menu-title">Meats</span>
-                </a>
-              </li>
-              <li>
-                <a href="#">
-                  <span class="menu-icn flaticon-fish"></span>
-                  <span class="menu-title">Fish</span>
-                </a>
-              </li>
+                @await Component.InvokeAsync("CategoryList")
             </ul>
           </div>
         </div>
