--- a/SuperMarket_Client/Areas/Customer/Views/Product/CompareProduct.cshtml
+++ b/SuperMarket_Client/Areas/Customer/Views/Product/CompareProduct.cshtml
@@ -176,7 +176,7 @@
 
         <!-- Button trigger modal -->
         <div>
-            <h4 style="color:#86BC42"> You are comparing product of category :<p style="color:midnightblue">@ViewBag.CateName </p>    </h4>
+            <h4 style="color:#86BC42"> You are comparing product of category :<span style="color:midnightblue">@ViewBag.CateName </span>    </h4>
             <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#cateModal">
                 <i class="fa fa-external-link" aria-hidden="true"></i>
                 Change Category?
