--- a/SuperMarket_Client/Areas/Admin/Views/Home/Index.cshtml
+++ b/SuperMarket_Client/Areas/Admin/Views/Home/Index.cshtml
@@ -1,5 +1,49 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
+﻿
+
+
+
+<div class="flex-container">
+
+    <!-- /.card-header -->
+    <div class="flex-card">
+        <a href="">
+            <div class="manage-option">
+                <i class="fa fa-archive" aria-hidden="true"></i>
+            
+                <p>Product Management</p>
+            </div>
+        </a>
+    </div>
+
+
+
+    <div class="flex-card">
+        <a href="">
+            <div class="manage-option">
+                   <i class="fa fa-shopping-cart" aria-hidden="true"></i>
+                <p>Order Management</p>
+            </div>
+        </a>
+    </div>
+
+
+    <div class="flex-card">
+        <a href="">
+            <div class="manage-option">
+              <i class="fa fa-list" aria-hidden="true"></i>
+                <p>Others</p>
+            </div>
+        </a>
+    </div>
+
+
+    <div class="flex-card">
+        <a href="">
+            <div class="manage-option">
+     
+           	<i class="fas fa-fw fa-chart-area"></i>
+                <p>Report</p>
+            </div>
+        </a>
+    </div>
+</div>
