--- a/SuperMarket_Client/Areas/Customer/Views/Cart/Checkout.cshtml
+++ b/SuperMarket_Client/Areas/Customer/Views/Cart/Checkout.cshtml
@@ -25,6 +25,7 @@
                         </div>
 
                         <form class="form2" id="checkout_form" name="checkout_form" action="#" method="post">
+
                             <div class="row">
                                 <div class="col-sm-12">
                                     <div class="form-group">
@@ -51,7 +52,7 @@
                                 <div class="col-sm-12">
                                     <div class="form-group">
                                         <label class="form-label">Town / City *</label>
-                                        <input class="form-control form_control" style="padding-left:10px;" type="text" asp-for="Order.City" required>
+                                         <input asp-for="Order.City" style="padding-left:10px;" class="form-control form_control mb10" type="text" required>
                                     </div>
                                 </div>
                                 <div class="col-sm-12">
