--- a/SuperMarket_Client/Areas/Customer/Views/Customer/Order.cshtml
+++ b/SuperMarket_Client/Areas/Customer/Views/Customer/Order.cshtml
@@ -1,4 +1,16 @@
-﻿<!-- Our Dashbord -->
+﻿@if(@TempData["MsgCancelOrder"] != null)
+{
+   <p id="msgCancel"> @TempData["MsgCancelOrder"]</p>
+    @section Scripts{
+        <script type="text/javascript">
+            $(function() {
+               Swal.fire($("#msgCancel").text())
+            })
+        </script>
+    }
+}
+
+<!-- Our Dashbord -->
 	<section class="our-dashbord dashbord">
 		<div class="container">
 			<div class="row">
@@ -47,7 +59,8 @@
                             <th></th>
                             <th>Order</th>
                             <th>Date</th>
-                            <th>Status</th>
+                            <th>Order Status</th>
+                            <th>Payment Status</th>
                             <th>Total</th>
                             <th>Action</th>
                         </tr>
@@ -58,6 +71,7 @@
                             <th>Order</th>
                             <th>Date</th>
                             <th>Order Status</th>
+                            <th>Payment Status</th>
                             <th>Total</th>
                             <th>Action</th>
                         </tr>
