--- a/SuperMarket_Client/Areas/Admin/Views/Order/OrderDetails.cshtml
+++ b/SuperMarket_Client/Areas/Admin/Views/Order/OrderDetails.cshtml
@@ -85,7 +85,7 @@
             {
                <a> <button type="button" name="" id="" class="btn btn-primary" btn-lg btn-block" style="margin:10px">Complete Order</button></a>
             }
-            else if (@Model.OrderStatus == SD.StatusCancelled)
+            else if (@Model.OrderStatus == SD.StatusCancelRequest)
             {
                <a><button type="button" name="" id="" class="btn btn-danger" btn-lg btn-block" style="margin:10px">Refund Order</button></a>
             }
