--- a/SuperMarket_Client/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/SuperMarket_Client/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -413,7 +413,7 @@
 	<script src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js" referrerpolicy="origin"></script>
 	<script src="https://cdn.datatables.net/1.12.1/js/dataTables.bootstrap5.min.js" referrerpolicy="origin"></script>
 	<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-
+	<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
 
 	<ejs-scripts></ejs-scripts>
