Đang làm select branch

--- a/SuperMarket_Client/Views/Shared/Components/BranchList/BranchList.cshtml
+++ b/SuperMarket_Client/Views/Shared/Components/BranchList/BranchList.cshtml
@@ -3,11 +3,11 @@
 
 
 	<!-- Modal -->
-	<div class="modal fade" id="mailchimp_newslatter_popup" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="mailchimp_newslatter_popup" aria-hidden="true">
+	@*<div class="modal fade" id="selectBranch_popup" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-hidden="true">*@
+	<div class="modal" id="selectBranch_popup">
 		<div class="modal-dialog modal-lg modal-dialog-centered">
 			<div class="modal-content">
 				<div class="modal-header">
-					<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 				</div>
 				<div class="modal-body">
 					<div class="row">
@@ -44,4 +44,3 @@
 			</div>
 		</div>
 	</div>
-
