Update giao dien, done get coupon list

--- a/SuperMarket_Client/Areas/Customer/Views/Cart/Index.cshtml
+++ b/SuperMarket_Client/Areas/Customer/Views/Cart/Index.cshtml
@@ -28,6 +28,22 @@ if ($.trim($("#itemOutStock").html()) != '') {
 }
 
 
+  <!-- Inner Page Breadcrumb -->
+  <section class="inner_page_breadcrumb">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-xl-7 justify-content-center">
+          <div class="shopping_cart_tabs">
+            <ul class="nav nav-tabs justify-content-center" id="myTab2" role="tablist">
+              <li class="nav-item" role="presentation">
+                <button class="nav-link active" id="cart-tab" data-bs-toggle="tab" data-bs-target="#cart" type="button" role="tab" aria-controls="cart" aria-selected="true">Shopping Cart</button>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 
 
 <!-- Shop Checkouts Content -->
