--- a/SuperMarket_Client/Areas/Customer/Views/Product/Details.cshtml
+++ b/SuperMarket_Client/Areas/Customer/Views/Product/Details.cshtml
@@ -8,10 +8,10 @@
         <div class="col-xl-6">
           <div class="breadcrumb_content">
             <ol class="breadcrumb">
-              <li class="breadcrumb-item"><a href="#">Home</a></li>
+              <li class="breadcrumb-item"><a href="/">Home</a></li>
               <li class="breadcrumb-item"><a href="#">Shop</a></li>
-              <li class="breadcrumb-item"><a href="#">Fruits</a></li>
-              <li class="breadcrumb-item active" aria-current="page"><a href="#">Pineapple (Tropical Gold) 1 lb</a></li>
+              <li class="breadcrumb-item"><a href="#">@Model.Product.Brand_Category.Category.CategoryName</a></li>
+              <li class="breadcrumb-item active" aria-current="page"><a href="#">@Model.Product.Title</a></li>
             </ol>
           </div>
         </div>
