--- a/SuperMarket_Client/wwwroot/Asset/css/style.css
+++ b/SuperMarket_Client/wwwroot/Asset/css/style.css
@@ -1,4 +1,4 @@
-/*******
+﻿/*******
 Project/Template Name:  Freshen - Organic & Food Store HTML Template
 Template Url:  
 Author: CreativeLayers
@@ -22497,3 +22497,4 @@ input.quantity-num[type="number"]::-webkit-outer-spin-button {
 .small-ratings i {
     color: #cecece;
 }
+
