--- a/SuperMarket_Client/Areas/Customer/Views/Cart/CompleteOrder.cshtml
+++ b/SuperMarket_Client/Areas/Customer/Views/Cart/CompleteOrder.cshtml
@@ -1,5 +1,22 @@
 ﻿@model SuperMarket_Models.ViewModels.OrderVM
 
+ <!-- Inner Page Breadcrumb -->
+  <section class="inner_page_breadcrumb">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-xl-7 justify-content-center">
+          <div class="shopping_cart_tabs">
+            <ul class="nav nav-tabs justify-content-center" id="myTab2" role="tablist">
+              <li class="nav-item" role="presentation">
+                <button class="nav-link active" id="prder-tab" data-bs-toggle="tab" data-bs-target="#prder" type="button" role="tab" aria-controls="prder" aria-selected="false">ORDER COMPLETE</button>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
 <div class="tab-pane fade show active" id="prder" role="tabpanel" aria-labelledby="prder-tab">
     <div class="row justify-content-center">
         <div class="col-lg-6">
