loi data product

--- a/SuperMarket_Client/Areas/Admin/Views/Brand/Index.cshtml
+++ b/SuperMarket_Client/Areas/Admin/Views/Brand/Index.cshtml
@@ -5,7 +5,8 @@
 <h3>@ViewData["Title"]</h3>
 
 <a class="btn btn-outline-primary" href="/Admin/Brand/CreateBrand">Create Brand</a> |
-<a class="btn btn-outline-primary" href="/Admin/Brand_Category/Brand_CategoryManage">Back to Brand-Category manage</a>
+<a class="btn btn-outline-primary" href="/Admin/Home/Index">Back to Home</a>
+
 
 <hr />
 
