--- a/SuperMarket_Client/Areas/Admin/Views/Product/Index.cshtml
+++ b/SuperMarket_Client/Areas/Admin/Views/Product/Index.cshtml
@@ -5,7 +5,7 @@
 <h3>@ViewData["Title"]</h3>
 
 <a class="btn btn-outline-primary" href="/Admin/Product/CreateProduct">Create Product</a> | 
-<a class="btn btn-outline-primary" href="/Admin/Brand_Category/Brand_CategoryManage">Back to Brand-Category manage</a>
+<a class="btn btn-outline-primary" href="/Admin/Home/Index">Back to Home</a>
 <hr />
 
 <table class="table" id="ProductTable">
@@ -33,9 +33,6 @@
 			<th>
 				Weight
 			</th>
-			@*<th>
-				Stock
-			</th>*@
 			<th>
 				Category
 			</th>
