--- a/SuperMarket_Client/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/SuperMarket_Client/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -123,9 +123,9 @@
 				<div id="collapsePages" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
 					<div class="bg-white py-2 collapse-inner rounded">
 						<h6 class="collapse-header">Login Screens:</h6>
-						<a class="collapse-item" asp-area="Admin" asp-action="ViewProduct" asp-controller="Home">Products</a>
-						<a class="collapse-item" asp-area="Admin" asp-action="ViewCategory" asp-controller="Home">Categories</a>
-						<a class="collapse-item" asp-area="Admin" asp-action="ViewSize" asp-controller="Home">Sizes</a>
+						<a class="collapse-item" asp-area="Admin" asp-action="Index" asp-controller="Product">Products</a>
+						<a class="collapse-item" asp-area="Admin" asp-action="Brand_CategoryManage" asp-controller="Brand_Category">Categories</a>
+						<a class="collapse-item" asp-area="Admin" asp-action="Index" asp-controller="Brand">Brand</a>
 						<a class="collapse-item" asp-area="Admin" asp-action="ViewColor" asp-controller="Home">Color</a>
 						<a class="collapse-item" asp-area="Admin" asp-action="ViewCoupon" asp-controller="Home">Coupon</a>
 
