--- a/SuperMarket_Client/Areas/Customer/Views/Home/Index.cshtml
+++ b/SuperMarket_Client/Areas/Customer/Views/Home/Index.cshtml
@@ -61,38 +61,6 @@
 				</div>
 			</div>
 		</div>
-		@*<div class="row mt70">
-		<div class="col-lg-8 col-xl-6">
-		<div class="banner_one">
-		<div class="thumb style1"><img src="images/banner/1.jpg" alt="1.jpg"></div>
-		<div class="details">
-		<p class="para">Fresh Fruit</p>
-		<h2 class="title">Fresh Summer With Just $200.99</h2>
-		<a href="page-shop-list-v1.html" class="shop_btn">SHOP NOW</a>
-		</div>
-		</div>
-		</div>
-		<div class="col-lg-4 col-xl-3">
-		<div class="banner_one">
-		<div class="thumb"><img src="images/banner/2.jpg" alt="2.jpg"></div>
-		<div class="details style2">
-		<p class="para">Seasonal Sale</p>
-		<h2 class="title">Up To Breads <span class="text-thm2">50% Off</span></h2>
-		<a href="page-shop-list-v1.html" class="shop_btn style2">SHOP NOW</a>
-		</div>
-		</div>
-		</div>
-		<div class="col-lg-6 col-xl-3">
-		<div class="banner_one">
-		<div class="thumb"><img src="images/banner/3.jpg" alt="3.jpg"></div>
-		<div class="details style2">
-		<p class="para">Tasty Healthy</p>
-		<h2 class="title">Fresh <span class="text-thm2">Vegetables</span></h2>
-		<a href="page-shop-list-v1.html" class="shop_btn style2">SHOP NOW</a>
-		</div>
-		</div>
-		</div>
-		</div>*@
 	</div>
 </section>
 
@@ -111,14 +79,11 @@
 		@*start cate*@
 		<div class="row">
 			<div class="col-lg-12">
-				<div class="popular_listing_sliders row">
+				<div class="popular_listing_sliders row ">
 					<!-- Nav tabs -->
 					<div class="nav nav-tabs mb30 col-lg-12 justify-content-center" role="tablist">
-
-
 						<button class="nav-link active" id="nav-home-tab" data-bs-toggle="tab" data-bs-target="#nav-All"
-								role="tab" aria-controls="nav-home" aria-selected="true">
-							All
+								role="tab" aria-controls="nav-home" aria-selected="true">All
 						</button>
 						@foreach (Category item in @ViewBag.categoryList)
 						{
@@ -147,9 +112,7 @@
 												}
 												<div class="thumb_info">
 													<ul class="mb0">
-														<li><a href="page-dashboard-wish-list.html"><span class="flaticon-heart"></span></a></li>
-														<li><a href="page-dashboard-wish-list.html"><span class="flaticon-search"></span></a></li>
-														<li><a href="page-shop-list-v6.html"><span class="flaticon-shuffle"></span></a></li>
+														<li><a class="addToCartHome" data-productid=@data.ProductId><span class="flaticon-shopping-cart"></span></a></li>
 													</ul>
 												</div>
 											</div>
@@ -167,8 +130,8 @@
 												<div class="sub_title">@data.ProductName <br> @data.Weight</div>
 												<div class="si_footer">
 													<div class="price">$@data.Price</div>
-													<a href="page-shop-cart.html" class="cart_btn btn-thm">
-														<span class="flaticon-shopping-cart mr10"></span>ADD TO CART
+													<a href="/Customer/Product/Details?id=@data.ProductId" class="cart_btn btn-thm">
+														<span class="flaticon-search mr10"></span>VIEW DETAIL
 													</a>
 												</div>
 											</div>
@@ -186,8 +149,6 @@
 
 						@foreach (Category item in @ViewBag.CategoryList)
 						{
-
-
 							<div class="tab-pane fade" id="nav-@item.CategoryName" role="tabpanel" aria-labelledby="nav-tab-@item.CategoryName">
 								<div class="popular_listing_slider1">
 									@foreach (var data in Model)
@@ -207,9 +168,7 @@
 														}
 														<div class="thumb_info">
 															<ul class="mb0">
-																<li><a href="page-dashboard-wish-list.html"><span class="flaticon-heart"></span></a></li>
-																<li><a href="page-dashboard-wish-list.html"><span class="flaticon-search"></span></a></li>
-																<li><a href="page-shop-list-v6.html"><span class="flaticon-shuffle"></span></a></li>
+																<li><a class="addToCartHome" data-productid=@data.ProductId><span class="flaticon-shopping-cart"></span></a></li>
 															</ul>
 														</div>
 													</div>
@@ -227,8 +186,8 @@
 														<div class="sub_title">@data.ProductName <br> @data.Weight</div>
 														<div class="si_footer">
 															<div class="price">$@data.Price</div>
-															<a href="page-shop-cart.html" class="cart_btn btn-thm">
-																<span class="flaticon-shopping-cart mr10"></span>ADD TO CART
+															<a href="/Customer/Product/Details?id=@data.ProductId" class="cart_btn btn-thm">
+																<span class="flaticon-search mr10"></span>VIEW DETAIL
 															</a>
 														</div>
 													</div>
