--- a/SuperMarket_Client/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/SuperMarket_Client/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -135,7 +135,7 @@
 
 			<!-- Nav Item - Charts -->
 			<li class="nav-item">
-				<a class="nav-link" href="charts.html">
+				<a class="nav-link" asp-action="Report" asp-area="Admin" asp-controller="Home">
 					<i class="fas fa-fw fa-chart-area"></i>
 					<span>Charts</span>
 				</a>
