--- a/SuperMarket_Client/Areas/Admin/Views/Category/UpdateCategory.cshtml
+++ b/SuperMarket_Client/Areas/Admin/Views/Category/UpdateCategory.cshtml
@@ -36,7 +36,15 @@
 		var imgdefault = `<img class="rounded py-2"  width="100px"`;
 		var fileUpload = document.getElementById("fileUpLoad");
 		function PreviewMainImg() {
-			var temp = window.URL.createObjectURL(fileUpload.files[0]);
-			previewArea.src = temp;
+
+            if (fileUpload.files[0].size > 3000000) {
+                alert("Picture must be lower than 3mb");
+                fileUpload.value = "";
+            }
+            else {
+				var temp = window.url.createobjecturl(fileupload.files[0]);
+				previewarea.src = temp;
+			}
+			
 		}
 	</script>
