--- a/SuperMarket_Client/Views/Shared/_Layout.cshtml
+++ b/SuperMarket_Client/Views/Shared/_Layout.cshtml
@@ -307,8 +307,8 @@
 									<img src="~/Asset/images/logoSuperMarket.png" alt="logoSuperMarket.png">
 								</a>
 							</div>
-							<p>Collins Street West, Victoria <br> 8007, Australia.</p>
-							<a href="#" class="shop_map_btn">SHOW ON MAP</a>
+							<p> Cach Mang Thang Tam <br> 580, VietNam.</p>
+							<a href="/Customer/StoreLocator/Index" class="shop_map_btn">SHOW ON MAP</a>
 						</div>
 						<div class="footer_social_widget mt30">
 							<ul class="mb0">
@@ -324,7 +324,7 @@
 						<div class="footer_contact_widget">
 							<h4>NEED HELP</h4>
 							<ul class="list-unstyled">
-								<li class="text-white df"><span class="flaticon-phone-call"></span><a class="phone" href="#">00 0392 96 32</a></li>
+								<li class="text-white df"><span class="flaticon-phone-call"></span><a class="phone" href="#">037 340 5298</a></li>
 								<li class="text-white"><a href="#">Monday - Friday : 9:00 - 20:00</a></li>
 								<li class="text-white"><a href="#">Saturday: 11:00 - 14:00</a></li>
 								<li class="text-white"><span class="flaticon-email"></span><a href="#">oder@freshen.com</a></li>
@@ -335,12 +335,8 @@
 						<div class="footer_qlink_widget">
 							<h4>INFORMATION</h4>
 							<ul class="list-unstyled">
-								<li><a href="#">Delivery Information</a></li>
-								<li><a href="#">Privacy Policy</a></li>
-								<li><a href="#">Terms & Conditions</a></li>
 								<li><a href="#">Contact</a></li>
-								<li><a href="#">Returns</a></li>
-								<li><a href="#">Affilate</a></li>
+								<li><a href="#">AboutUs</a></li>
 							</ul>
 						</div>
 					</div>
@@ -350,10 +346,6 @@
 							<ul class="list-unstyled">
 								<li><a href="#">My account</a></li>
 								<li><a href="#">Order History</a></li>
-								<li><a href="#">Wishlist</a></li>
-								<li><a href="#">Shipping</a></li>
-								<li><a href="#">Privacy Policy</a></li>
-								<li><a href="#">Help</a></li>
 							</ul>
 						</div>
 					</div>
